--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,16 @@ services:
       - "8000:80"
     volumes:
       - .:/code
+    depends_on:
+      - mosquitto
+
+  mosquitto:
+    image: eclipse-mosquitto:latest
+    container_name: mosquitto-broker
+    ports:
+      - "1883:1883"
+    volumes:
+      - ./broker/config:/mosquitto/config
+      - ./broker/data:/mosquitto/data
+      - ./broker/log:/mosquitto/log
+    restart: unless-stopped
