--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 fastapi[standard]==0.117.1
-python-dotenv==1.1.0
-pydantic==2.11.4
+python-dotenv==1.1.1
+pydantic==2.11.9
+pydantic-settings==2.10.1
+fastapi-mqtt
+gmqtt
