--- a/.env_example
+++ b/.env_example
@@ -3,3 +3,9 @@ MQTT_PORT=1883
 MQTT_KEEPALIVE=60
 MQTT_USERNAME=andruGanteng123!
 MQTT_PASSWORD=andruGanteng123!
+
+MONGO_HOST=mongo
+MONGO_PORT=27017
+MONGO_DATABASE=iot
+MONGO_USERNAME=root
+MONGO_PASSWORD=root
