--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi[standard]==0.117.1
 python-dotenv==1.1.1
 pydantic==2.11.9
-pydantic-settings==2.10.1
+pydantic-settings==2.11.0
 fastapi-mqtt
 gmqtt
+motor
