--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,14 +24,24 @@ services:
 
   mongo:
     image: mongo
-    restart: always
     ports:
       - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME:${MONGO_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD:${MONGO_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     volumes:
       - mongo_data:/data/db
+  mongo-express:
+    image: mongo-express
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_USERNAME}
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASSWORD}
+      - ME_CONFIG_MONGODB_SERVER=mongo
+    depends_on:
+      # nunggu container mongo kelar dulu baru jalanin
+      - mongo
 
 volumes:
   mongo_data:
