--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,15 @@
 services:
-  # backend:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - "8000:80"
-  #   volumes:
-  #     - .:/code
-  #   depends_on:
-  #     - mosquitto
-  #     - mongo
-
+  backend:
+    build:
+     context: .
+     dockerfile: Dockerfile
+    ports:
+     - "8000:80"
+    volumes:
+     - .:/code
+    depends_on:
+     - mosquitto
+     - mongo
   mosquitto:
     image: eclipse-mosquitto:latest
     container_name: mosquitto-broker
